--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@ h2 {
 .banner {
   display: grid;
   grid-template-columns: repeat(14, 50px);
-  grid-template-rows: repeat(7, 100px);
+  grid-template-rows: repeat(8, 100px);
 }
 
 .yelp {
@@ -44,6 +44,46 @@ h2 {
 
 .yelp img {
   width: 150px;
+}
+
+.pulse {
+  display: block;
+  width: 100%;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(236, 9, 40, 0.4);
+  animation: pulse 2s infinite;
+}
+
+.pulse:hover {
+  animation: none;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(236, 9, 40, 0.4);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 15px rgba(236, 9, 40, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(236, 9, 40, 0);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(236, 9, 40, 0.4);
+    box-shadow: 0 0 0 0 rgba(236, 9, 40, 0.4);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 15px rgba(236, 9, 40, 0);
+      box-shadow: 0 0 0 15px rgba(236, 9, 40, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(236, 9, 40, 0);
+      box-shadow: 0 0 0 0 rgba(236, 9, 40, 0);
+  }
 }
 
 .big-circle {
