--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
 html {
   background: linear-gradient(to bottom, #d7d2cc 0%, #304352 100%);
-
 }
 
 body {
@@ -8,6 +7,7 @@ body {
   background-image: url("https://www.transparenttextures.com/patterns/black-thread-light.png");
   min-width: 700px;
   margin: 0;
+  padding-bottom: 100px;
 }
 
 h1, h2, h3 {
@@ -164,7 +164,7 @@ h2 {
   justify-content: space-around;
   width: 260px;
   height: 170px;
-  padding-left: 15px;
+  padding: 5px 15px;
   background-color: rgba(255, 255, 255, 0.6);
   border-radius: 5px;
   z-index: 0;
@@ -183,7 +183,6 @@ h2 {
   background-color: rgba(255, 255, 255, 0.6);
   border-radius: 5px;
   padding: 0 25px 20px;
-  margin-bottom: 100px;
   min-width: 700px;
   max-width: 900px;
 }
